--- a/app/src/main/res/layout/fragment_monitoring.xml
+++ b/app/src/main/res/layout/fragment_monitoring.xml
@@ -8,4 +8,16 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Start" />
+
+    <TextView
+        android:id="@+id/tv_acceleration_xyz"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="TextView" />
+
+    <Button
+        android:id="@+id/button_to_feedback"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="You want Feedback?" />
 </LinearLayout>
