zweites Fragment für Datenbank hinzugefügt

--- a/app/src/main/res/layout/fragment_monitoring.xml
+++ b/app/src/main/res/layout/fragment_monitoring.xml
@@ -20,4 +20,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="You want Feedback?" />
+
+    <Button
+        android:id="@+id/button_to_database"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="You want old Measurements?" />
 </LinearLayout>
