--- a/app/src/main/res/layout/fragment_monitoring.xml
+++ b/app/src/main/res/layout/fragment_monitoring.xml
@@ -1,25 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_gravity="center"
+    android:background="#a49189" >
+
+    <TextView
+        android:id="@+id/measurement_header"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/new_measurement"
+        android:textColor="#695e59"
+        android:textStyle="bold"
+        android:textSize="20sp"
+        android:layout_gravity="center"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="20dp"/>
+
+    <LinearLayout
+        android:layout_width="124dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
+        android:layout_gravity="center">
+
 
     <Button
         android:id="@+id/button_start"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="&#9654;" />
+        android:layout_gravity="center_horizontal"
+        android:layout_width="42dp"
+        android:layout_height="42dp"
+        android:layout_weight="1"
+        android:layout_marginRight="20dp"
+        android:text="@string/play"
+        android:textSize="20sp"
+        android:background="@drawable/custom_play_button" />
+
 
     <Button
         android:id="@+id/button_stop"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="&#9632;" />
+        android:layout_gravity="center_horizontal"
+        android:layout_width="42dp"
+        android:layout_height="42dp"
+        android:layout_weight="1"
+        android:layout_marginLeft="20dp"
+        android:text="@string/stop"
+        android:textSize="20sp"
+        android:background="@drawable/custom_stop_button" />
+
+    </LinearLayout>
+
 
     <Button
         android:id="@+id/button_save_to_DB"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/save_to_db" />
+        android:text="@string/save_measurement"
+        android:background="@drawable/oval" />
 
     <TextView
         android:id="@+id/tv_acceleration_xyz"
@@ -36,11 +73,14 @@
         android:id="@+id/button_to_feedback"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/you_want_feedback" />
+        android:text="@string/you_want_feedback"
+        android:background="@drawable/oval"
+        android:layout_marginBottom="10dp"/>
 
     <Button
         android:id="@+id/button_to_database"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/you_want_old_measurements" />
+        android:text="@string/you_want_old_measurements"
+        android:background="@drawable/oval" />
 </LinearLayout>
