--- a/app/src/main/res/layout/fragment_monitoring.xml
+++ b/app/src/main/res/layout/fragment_monitoring.xml
@@ -13,40 +13,44 @@
         android:text="@string/new_measurement"
         android:textColor="#695e59"
         android:textStyle="bold"
-        android:textSize="20sp"
+        android:textSize="30sp"
         android:layout_gravity="center"
         android:layout_marginTop="10dp"
-        android:layout_marginBottom="20dp"/>
+        android:layout_marginBottom="30dp"/>
 
     <LinearLayout
-        android:layout_width="124dp"
+        android:layout_width="140dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="30dp"
         android:layout_gravity="center">
 
 
     <Button
         android:id="@+id/button_start"
         android:layout_gravity="center_horizontal"
-        android:layout_width="42dp"
-        android:layout_height="42dp"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
         android:layout_weight="1"
         android:layout_marginRight="20dp"
         android:text="@string/play"
-        android:textSize="20sp"
-        android:background="@drawable/custom_play_button" />
+        android:textSize="30sp"
+        android:background="@drawable/custom_play_button"
+        android:paddingBottom="2dp"
+        android:paddingTop="0dp" />
 
 
     <Button
         android:id="@+id/button_stop"
         android:layout_gravity="center_horizontal"
-        android:layout_width="42dp"
-        android:layout_height="42dp"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
         android:layout_weight="1"
         android:layout_marginLeft="20dp"
         android:text="@string/stop"
-        android:textSize="20sp"
-        android:background="@drawable/custom_stop_button" />
+        android:textSize="30sp"
+        android:background="@drawable/custom_stop_button"
+        android:paddingBottom="2dp"
+        android:paddingTop="0dp" />
 
     </LinearLayout>
 
@@ -62,12 +66,17 @@
         android:id="@+id/tv_acceleration_xyz"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/sensorwerte_x_y_z" />
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="10dp"
+        android:text="@string/live_sensor_data" />
 
     <com.github.mikephil.charting.charts.BarChart
         android:id="@+id/livedata_barchart"
         android:layout_width="match_parent"
-        android:layout_height="250dip"/>
+        android:layout_height="250dip"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="30dp"
+        android:background="@color/cardview_light_background" />
 
     <Button
         android:id="@+id/button_to_feedback"
@@ -75,7 +84,7 @@
         android:layout_height="wrap_content"
         android:text="@string/you_want_feedback"
         android:background="@drawable/oval"
-        android:layout_marginBottom="10dp"/>
+        android:layout_marginBottom="15dp"/>
 
     <Button
         android:id="@+id/button_to_database"
