--- a/app/src/main/res/layout/fragment_start.xml
+++ b/app/src/main/res/layout/fragment_start.xml
@@ -12,9 +12,11 @@
     <Button
         android:id="@+id/button_measurement"
         android:layout_width="350dp"
-        android:layout_height="50dp"
+        android:layout_height="100dp"
         android:layout_gravity="center_vertical"
         android:text="@string/start_new_measurement"
+        android:textSize="20dp"
+        android:textStyle="bold"
         android:background="@drawable/start"/>
 
 </LinearLayout>
