--- a/app/src/main/res/layout/fragment_monitoring.xml
+++ b/app/src/main/res/layout/fragment_monitoring.xml
@@ -62,7 +62,7 @@
         android:layout_height="wrap_content"
         android:text="@string/save_measurement"
         android:textSize="15dp"
-        android:background="@drawable/oval" />
+        android:background="@drawable/custom_oval_button" />
 
     <TextView
         android:id="@+id/tv_acceleration_xyz"
@@ -86,7 +86,7 @@
         android:layout_height="wrap_content"
         android:text="@string/you_want_feedback"
         android:textSize="15dp"
-        android:background="@drawable/oval"
+        android:background="@drawable/custom_oval_button"
         android:layout_marginBottom="15dp"/>
 
     <Button
@@ -95,5 +95,5 @@
         android:layout_height="wrap_content"
         android:text="@string/you_want_old_measurements"
         android:textSize="15dp"
-        android:background="@drawable/oval" />
+        android:background="@drawable/custom_oval_button" />
 </LinearLayout>
