--- a/app/src/main/res/layout/fragment_start.xml
+++ b/app/src/main/res/layout/fragment_start.xml
@@ -17,6 +17,6 @@
         android:text="@string/start_new_measurement"
         android:textSize="20dp"
         android:textStyle="bold"
-        android:background="@drawable/start"/>
+        android:background="@drawable/custom_start_button"/>
 
 </LinearLayout>
