--- a/app/src/main/res/layout/fragment_monitoring.xml
+++ b/app/src/main/res/layout/fragment_monitoring.xml
@@ -56,20 +56,13 @@
     </LinearLayout>
 
 
-    <Button
-        android:id="@+id/button_save_to_DB"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/save_measurement"
-        android:textSize="15dp"
-        android:background="@drawable/oval" />
-
     <TextView
         android:id="@+id/tv_acceleration_xyz"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="10dp"
+        android:layout_marginLeft="5dp"
         android:text="@string/live_sensor_data" />
 
     <com.github.mikephil.charting.charts.BarChart
