--- a/app/src/main/res/layout/fragment_monitoring.xml
+++ b/app/src/main/res/layout/fragment_monitoring.xml
@@ -62,6 +62,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="10dp"
+        android:layout_marginLeft="5dp"
         android:text="@string/live_sensor_data" />
 
     <com.github.mikephil.charting.charts.BarChart
