--- a/app/src/main/res/layout/fragment_monitoring.xml
+++ b/app/src/main/res/layout/fragment_monitoring.xml
@@ -70,7 +70,7 @@
         android:layout_width="match_parent"
         android:layout_height="250dip"
         android:layout_marginTop="10dp"
-        android:layout_marginBottom="30dp"
+        android:layout_marginBottom="40dp"
         android:background="@color/cardview_light_background" />
 
     <Button
@@ -88,6 +88,7 @@
         android:layout_height="wrap_content"
         android:text="@string/you_want_old_measurements"
         android:textSize="15dp"
+        android:layout_marginTop="10dp"
         android:background="@drawable/custom_oval_button" />
 
 </LinearLayout>
