--- a/app/src/main/res/layout/fragment_start.xml
+++ b/app/src/main/res/layout/fragment_start.xml
@@ -3,35 +3,41 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
+    android:gravity="center_horizontal"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#a49189"
     tools:context=".StartActivity">
 
+
+
     <EditText android:id="@+id/username"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="150dp"
+        android:layout_marginTop="130dp"
         android:hint="@string/enter_your_username" />
 
     <EditText android:id="@+id/date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
         android:layout_marginTop="20dp"
         android:hint="@string/mm_dd_yyyy" />
 
     <Button
         android:id="@+id/button_measurement"
-        android:layout_gravity="center_horizontal"
-
-        android:layout_width="250dp"
+        android:layout_width="230dp"
         android:layout_height="100dp"
         android:text="@string/start_new_measurement"
         android:textSize="23dp"
         android:textStyle="bold"
-        android:layout_marginTop="65dp"
+        android:layout_marginTop="50dp"
         android:background="@drawable/custom_start_button"/>
+
+    <ImageButton
+        android:id="@+id/runner"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:background="@drawable/ic_action_runner"
+        android:layout_marginTop="50dp" />
 
 </LinearLayout>
