--- a/app/src/main/res/layout/fragment_monitoring.xml
+++ b/app/src/main/res/layout/fragment_monitoring.xml
@@ -91,4 +91,12 @@
         android:layout_marginTop="10dp"
         android:background="@drawable/custom_oval_button" />
 
+    <ImageButton
+        android:id="@+id/backtostartbutton"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:background="@drawable/ic_action_backarrow"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="350dp" />
+
 </LinearLayout>
