--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -28,6 +28,9 @@
         <action
             android:id="@+id/action_monitoringFragment_to_datenbankFragment"
             app:destination="@id/datenbankFragment" />
+        <action
+            android:id="@+id/action_monitoringFragment_to_startFragment"
+            app:destination="@id/startFragment" />
     </fragment>
     <fragment
         tools:layout="@layout/fragment_feedback"
